# tradestation-downloader

./: .gitignore  README.md  RELEASE.md  analysis_notebook.ipynb  config.yaml.template  data_utils.py  pyproject.toml  release.bat  requirements.txt  setup_auth.py  tradestation_downloader.py
tests/: test_storage.py
tradestation/: __init__.py  cli.py  downloader.py  models.py  storage.py
